--- a/ArchitectureTemplate.Mvc/Views/Permission/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Permission/Index.cshtml
@@ -22,7 +22,7 @@
     <hr>
 
     <div id="DivDados">
-        @if (Model.ProfilePorScreenList != null && Model.ProfilePorScreenList.Any())
+        @if (Model.ProfileForScreenList != null && Model.ProfileForScreenList.Any())
         {
             @Html.Partial("_List", Model)
         }
