--- a/ArchitectureTemplate.Mvc/Views/Permission/_List.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Permission/_List.cshtml
@@ -34,7 +34,7 @@
             </th>
         </tr>
 
-        @foreach (var item in Model.ProfilePorScreenList)
+        @foreach (var item in Model.ProfileForScreenList)
         {
             <tr>
                 <td>
