--- a/ArchitectureTemplate.Mvc/Views/Menu/Index.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/Menu/Index.cshtml
@@ -22,7 +22,7 @@
     <hr>
 
     <div id="DivDados">
-        @if (Model.ProfilePorMenuList?.Any() ?? false)
+        @if (Model.ProfileForMenuList?.Any() ?? false)
         {
             @Html.Partial("_List", Model)
         }
