--- a/ArchitectureTemplate.Mvc/Views/User/Create.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/User/Create.cshtml
@@ -19,7 +19,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.HierarchyId, new { @class = "control-label col-md-3" })
                 <div class="col-md-5">
-                    @Html.DropDownListFor(model => model.HierarchyId, new SelectList(Model.HierarchyDictionary, "Key", "Value"), "Selecione", new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.HierarchyId, new SelectList(Model.HierarchyDictionary, "Key", "Value"), "Select", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.HierarchyId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -27,7 +27,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ProfileId, new { @class = "control-label col-md-3" })
                 <div class="col-md-5">
-                    @Html.DropDownListFor(model => model.ProfileId, new SelectList(Model.ProfileDictionary, "Key", "Value"), "Selecione", new { @class = "form-control", @required = true })
+                    @Html.DropDownListFor(model => model.ProfileId, new SelectList(Model.ProfileDictionary, "Key", "Value"), "Select", new { @class = "form-control", @required = true })
                     @Html.ValidationMessageFor(model => model.ProfileId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -35,7 +35,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Nome, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o nome", @maxleght = 100 } })
+                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your name", @maxleght = 100 } })
                     @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -43,7 +43,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Cpf, new { @class = "control-label col-md-3" })
                 <div class="col-md-3">
-                    @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control", @required = true, @cpf = true, @placeholder = "Informe o Cpf" } })
+                    @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control", @required = true, @cpf = true, @placeholder = "Type your Cpf" } })
                     @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -51,7 +51,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o email" } })
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your email" } })
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -59,7 +59,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Telefone, new { @class = "control-label col-md-3" })
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o telefone" } })
+                    @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your celphone" } })
                     @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -67,7 +67,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Login, new { @class = "control-label col-md-3" })
                 <div class="col-md-5">
-                    @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o login" } })
+                    @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your login" } })
                     @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -75,7 +75,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.DataExpiracaoSenha, new { @class = "control-label col-md-3" })
                 <div class="col-md-3">
-                    @Html.EditorFor(model => model.DataExpiracaoSenha, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe a data de expiração da senha" } })
+                    @Html.EditorFor(model => model.DataExpiracaoSenha, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Enter the password expiration date" } })
                     @Html.ValidationMessageFor(model => model.DataExpiracaoSenha, "", new { @class = "text-danger" })
                 </div>
             </div>
