--- a/ArchitectureTemplate.Mvc/Views/User/Edit.cshtml
+++ b/ArchitectureTemplate.Mvc/Views/User/Edit.cshtml
@@ -23,7 +23,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.HierarchyId, new { @class = "control-label col-md-3" })
                 <div class="col-md-5">
-                    @Html.DropDownListFor(model => model.HierarchyId, new SelectList(Model.HierarchyDictionary, "Key", "Value"), "Selecione", new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.HierarchyId, new SelectList(Model.HierarchyDictionary, "Key", "Value"), "Select", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.HierarchyId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -31,7 +31,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ProfileId, new {@class = "control-label col-md-3"})
                 <div class="col-md-5">
-                    @Html.DropDownListFor(model => model.ProfileId, new SelectList(Model.ProfileDictionary, "Key", "Value"), "Selecione", new {@class = "form-control", @required = true})
+                    @Html.DropDownListFor(model => model.ProfileId, new SelectList(Model.ProfileDictionary, "Key", "Value"), "Select", new {@class = "form-control", @required = true})
                     @Html.ValidationMessageFor(model => model.ProfileId, "", new {@class = "text-danger"})
                 </div>
             </div>
@@ -39,7 +39,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Nome, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o nome" } })
+                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your name" } })
                     @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Cpf, new { @class = "control-label col-md-3" })
                 <div class="col-md-3">
-                    @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control", @required = true, @cpf = true, @placeholder = "Informe o Cpf" } })
+                    @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control", @required = true, @cpf = true, @placeholder = "Type your Cpf" } })
                     @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -55,7 +55,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o email" } })
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your email" } })
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -63,7 +63,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Telefone, new { @class = "control-label col-md-3" })
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o telefone" } })
+                    @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your celphone" } })
                     @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -71,7 +71,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Login, new { @class = "control-label col-md-3" })
                 <div class="col-md-5">
-                    @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe o login" } })
+                    @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Type your login" } })
                     @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -79,7 +79,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.DataExpiracaoSenha, new { @class = "control-label col-md-3" })
                 <div class="col-md-3">
-                    @Html.EditorFor(model => model.DataExpiracaoSenha, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Informe a data de expiração da senha" } })
+                    @Html.EditorFor(model => model.DataExpiracaoSenha, new { htmlAttributes = new { @class = "form-control", @required = true, @placeholder = "Enter the password expiration date" } })
                     @Html.ValidationMessageFor(model => model.DataExpiracaoSenha, "", new { @class = "text-danger" })
                 </div>
             </div>
